<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="sample">時刻を設定してください</string>
    <string name="app_name">時刻設定</string>
    <string name="ask_sleeptime">普段の起床時間を教えてください (起動:-10時間)</string>
    <string name="next"> 次へ</string>
    <string name="option"> 設定する</string>
    <string name="desk"> 背景</string>
    <string name="debug"> </string>
    <string name="log">ログの確認</string>
    <string name="wakeup">起床</string>
    <string name="sensor">センシング開始</string>
</resources>