<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/frameLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@mipmap/back"
                android:contentDescription="@string/desk" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginTop="250dp"
                android:text="@string/ask_sleeptime"
                android:textColor="#d0d0ff"
                android:textSize="20sp"
                android:textStyle="bold"
                android:id="@+id/ask_sleeptime"
                android:layout_gravity="center_horizontal" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="68dp"
                android:gravity="center"
                android:layout_marginTop="30dp"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                android:textSize="25sp"
                android:id="@+id/option"
                android:text="@string/option"
                android:textColor="#cacaca"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:id="@+id/show_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/sample"
                android:textColor="#d0d0ff"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                android:key="time_key"/>

            <TextView
                android:id="@+id/debug"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/debug"
                android:textColor="#d0d0ff"
                android:textSize="40sp"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                android:key="time_key"/>
<!--
            <Button
                android:layout_width="wrap_content"
                android:layout_height="68dp"
                android:layout_marginTop="30dp"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                android:textSize="25sp"
                android:text="@string/next"
                android:textColor="#cacaca"
                android:layout_gravity="center_horizontal" />
-->


        </LinearLayout>
    </FrameLayout>
</LinearLayout>